loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:3: error: not found: value doite
  avance(4);gauche();avance(2);doite();avance(4);droite();avance(2);gauche;avance(4);gauche()
                               ^